--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,3 +2,116 @@
     ViewData["Title"] = "Home Page";
 }
 
+<link rel="stylesheet" href="~/app/leaflet/leaflet.css"/>
+
+<style>
+    #map{
+        height: calc(100vh - 0px) !important;
+    }
+    .leaflet-container {
+        width: 100%;
+        height: 100vh;
+    }
+
+    .legend, .temporal-legend {
+        padding: 6px 10px;
+        font: 14px/16px Arial, Helvetica, sans-serif;
+        background: rgba(0,0,0,0.85);
+        box-shadow: 0 0 15px rgba(0,0,0,0.2);
+        border-radius: 5px;
+        color: whitesmoke;
+    }
+
+    #legendTitle {
+        text-align: center;
+        margin-bottom: 15px;
+        color: whitesmoke;
+        font-weight: bold;
+    }
+
+    .symbolsContainer {
+        float: left;
+        margin-left: 50px;
+    }
+
+    .legendCircle {
+        border-radius: 50%;
+        border: 1px solid #537898;
+        background: rgba(0,128,128,1.5);
+        display: inline-block;
+    }
+
+    .legendValue{
+        position: absolute;
+        right: 12px;
+        color: whitesmoke;
+        font-size: 10pt;
+        text-align: center;
+        font-weight: bold;
+    }
+
+    .info {
+        width: 30vw;
+        height: 48vh;
+        padding: 6px 10px;
+        font: 14px/16px Arial, Helvetica, sans-serif;
+        background: rgba(0,0,0,0.85);
+        box-shadow: 0 0 15px rgba(0,0,0,0.2);
+        border-radius: 5px;
+        color: whitesmoke;
+    }
+
+    .info h5 {
+        margin: 0 0 5px;
+        color: #777;
+        text-align: center;
+        color: whitesmoke;
+        font-weight: bolder;
+    }
+
+    .info #horBarChart {
+        width: 100% !important;
+        max-width: 800px;
+    }
+
+    .leaflet-control-layers{
+        float: right;
+        top: 500px;
+        right: 0;
+        position: absolute;
+        background: rgba(0,0,0,0.85);
+        box-shadow: rgba(0,0,0,0.2);
+    }
+
+    .legend {
+        line-height: 20px;
+        color: white;
+    }
+
+    .legend i {
+        width: 18px;
+        height: 18px;
+        float: left;
+        margin-right: 8px;
+        opacity: 0.7;
+    }
+</style>
+
+<script src="~/app/jquery/dist/jquery.min.js"></script>
+<script src="~/app/leaflet/leaflet.js"></script>
+<script src="~/app/extscripts/js/Chart.js"></script>
+
+
+<div id="map"></div>
+
+<script>
+    
+    var OpenStreetMap_Mapnik = L.tileLayer('http://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
+	maxZoom: 19,
+	attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+});
+
+    var map = L.map('map', {
+        layers: [OpenStreetMap_Mapnik]
+    }).setView([-33.925, 18.625], 11);
+</script>
