--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
 
     .info h5 {
         margin: 0 0 5px;
-        color: #777;
+        @* color: #777; *@
         text-align: center;
         color: whitesmoke;
         font-weight: bolder;
@@ -106,12 +106,83 @@
 
 <script>
     
-    var OpenStreetMap_Mapnik = L.tileLayer('http://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
+    var dataUrl = "http://localhost:5118/waterconsumption/getall";
+
+    var OsmHumanitarian = L.tileLayer('http://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png', {
 	maxZoom: 19,
 	attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    });
+    var OpenStreetMap = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+	maxZoom: 19,
+	attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    });
+    var Stadia_OSMBright = L.tileLayer('https://tiles.stadiamaps.com/tiles/osm_bright/{z}/{x}/{y}{r}.{ext}', {
+	minZoom: 0,
+	maxZoom: 20,
+	attribution: '&copy; <a href="https://www.stadiamaps.com/" target="_blank">Stadia Maps</a> &copy; <a href="https://openmaptiles.org/" target="_blank">OpenMapTiles</a> &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+	ext: 'png'
 });
 
     var map = L.map('map', {
-        layers: [OpenStreetMap_Mapnik]
+        layers: [OsmHumanitarian]
     }).setView([-33.925, 18.625], 11);
-</script>
+
+    @* Coordinates to Curitiba *@
+    @* var map = L.map('map', {
+        layers: [OsmHumanitarian]
+    }).setView([-25.4284, -49.2733], 11);  *@
+
+
+        var baseLayers = {
+        "Open Street Map": OpenStreetMap,
+        "OSM Humanitarian": OsmHumanitarian,
+        "Stadia OSM Bright": Stadia_OSMBright
+        }
+
+    L.control.layers(baseLayers).addTo(map);
+
+    function getColor(d) {
+        var pallete = ['#ffffe5','#f7fcb9','#d9f0a3','#addd8e','#78c679','#41ab5d','#238443','#005a32'];
+        return d > 40 ? pallete[7] :
+            d > 35 ? pallete[6] :
+            d > 30 ? pallete[5] :
+            d > 25 ? pallete[4] :
+            d > 20 ? pallete[3] :
+            d > 15 ? pallete[2] :
+            d > 10 ? pallete[1] :
+                     pallete[0];
+    }
+
+    $.getJSON(dataUrl, function(data){
+        $.each(data, function(i,item){
+            var convePolygons = JSON.parse(item.coordinates);
+
+            var polygons = L.polygon(convePolygons, {
+                fillColor: getColor(item.avarageMonthlyKL),
+                color: 'white',
+                fillOpacity: 0.8
+            });
+            polygons.bindPopup(
+                "<h4><b>Suburb Group: </b> [" + item.suburbGroup.toString() + "]</h4>" +
+                "<h4><b>Neighbourhood: </b> " + item.neighbourhood.toString() + "</h4>" +
+                "<h4><b>Water Consumption: </b> " + item.avarageMonthlyKL.toString() + " KL</h4>"
+            );
+            polygons.on('mouseover', function(e){
+                this.setStyle({
+                    color: 'yellow',
+                    weight: 5
+                });
+                this.openPopup();
+            });
+            polygons.on('mouseout', function(e){
+                this.setStyle({
+                    color: 'white',
+                    weight: 2
+                });
+                this.closePopup();
+            });
+            polygons.addTo(map);
+        });
+    });
+</script> 
+
